Conecta. Se ha actualizado la exportación al formato Logic Win